#185 refactored towards new SpringBoot features; Updated headers