@@ -1,5 +1,5 @@
 /*
- * Copyright 2005-2025 the original author or authors.
+ * Copyright 2005-2026 the original author or authors.
  *
  * Licensed under the Apache License, Version 2.0 (the "License");
  * you may not use this file except in compliance with the License.
@@ -21,7 +21,7 @@ import java.util.List;
 import java.util.Map;
 
 /**
- * A CollectionUtil.
+ * A CollectionUtil collects useful utility functions to work with Java collections that are not part of the JDK or other libraries.
  *
  * @author Heiko Scherrer
  */
@@ -42,7 +42,7 @@ public final class CollectionUtil {
         if (list == null || list.isEmpty()) {
             return null;
         }
-        return list.get(0);
+        return list.getFirst();
     }
 
     /**
